# HeadAnalysis

./: CMakeLists.txt  HeadAnalysis.cpp  HeadAnalysis.h  HeadAnalysis.sln  ModelRender.cpp  ModelRender.h  README.md  main.cpp
HeadAnalysis/: HeadAnalysis.cpp  HeadAnalysis.h  HeadAnalysis.vcxproj  HeadAnalysis.vcxproj.filters  ModelRender.cpp  ModelRender.h  OpenCVLinker.h  OpenGLLinker.h  main.cpp
cmake/: add-libraries-linux.cmake  add-libraries-windows.cmake  target-link-libraries-linux.cmake  target-link-libraries-windows.cmake
